--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </header>
         
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -49,7 +49,74 @@
                 </div>
 
             </nav>
-        </div>
+        </aside>
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius amet, animi sapiente qui veniam voluptatem, suscipit impedit perferendis accusamus laudantium porro deserunt beatae expedita. Vel excepturi expedita atque officia voluptatem?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem labore tempora deserunt quam eos vero. Quod fugiat, ab tempora ratione sit veritatis rem exercitationem necessitatibus iure, quo qui! Laborum, quibusdam!</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Design</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nesciunt sequi quaerat molestiae, sunt inventore neque dolor accusamus illum libero delectus quod aliquid. Fuga, eum quas dolore pariatur dolor error?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quo nobis reiciendis quisquam corrupti, in ratione iusto similique non sequi! Omnis, aspernatur fuga. Pariatur eum vero nobis voluptatibus accusantium ab.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Bootstrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus adipisci ducimus sunt doloremque animi ullam hic voluptates aut expedita voluptatum nobis a, repellendus quasi voluptatibus recusandae asperiores! Iure, totam fugit?</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e Github</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum excepturi ut, quaerat nam voluptas sapiente quisquam quidem voluptatem eius ipsam nostrum magni explicabo temporibus tenetur, autem voluptates provident aliquam beatae.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
     </div>
 </body>
 <script src="script.js"></script>
